# LazyLogger

./: .env.example  .gitignore  LazyLogger-specs.md  README.md  docker-compose.yml
.claude/: settings.local.json
agent/: Dockerfile  pyproject.toml  system_prompt.md
agent/src/: agent.py  config.py  link_extractor.py  main.py  mcp_client.py  telegram_bot.py  utils.py
agent/tests/: test_config.py  test_link_extractor.py  test_telegram_bot.py  test_utils.py
obsidian-sync/: Dockerfile  entrypoint.sh
